--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Poorvi Jain</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body oncontextmenu="return false;">
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="#">Resume</a>
@@ -19,6 +19,7 @@
     <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
     
     <script>
+
         function openNav() {
             document.getElementById("mySidenav").style.width = "250px";
         }
@@ -26,6 +27,20 @@
         function closeNav() {
             document.getElementById("mySidenav").style.width = "0";
         }
+        document.onkeydown = function (e) {
+                if (event.keyCode == 123) {
+                    return false;
+                }
+                if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+                    return false;
+                }
+                if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+                    return false;
+                }
+                if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+                    return false;
+                }
+            }
     </script>
 </body>
 </html>
